# python-tjbotlib

./: README.md  pyproject.toml
src/tjbot/: __init__.py  error.py  tjbot.py
src/tjbot/camera/: __init__.py  camera.py
src/tjbot/config/: __init__.py  config.py  models.py  tjbot.default.toml
src/tjbot/led/: __init__.py  led_common_anode.py  led_neopixel.py
src/tjbot/microphone/: __init__.py  microphone.py
src/tjbot/rpi_drivers/: __init__.py  rpi5_driver.py  rpi_common_driver.py  rpi_detect.py  rpi_driver.py
src/tjbot/servo/: __init__.py  constants.py  servo.py
src/tjbot/speaker/: __init__.py  speaker.py
src/tjbot/stt/: __init__.py  engine.py  stt.py
src/tjbot/stt/backends/: __init__.py  azure_stt.py  google_stt.py  sherpa_onnx_stt.py  watson_stt.py
src/tjbot/tts/: __init__.py  engine.py  tts.py
src/tjbot/tts/backends/: __init__.py  azure_tts.py  google_tts.py  sherpa_onnx_tts.py  watson_tts.py
src/tjbot/utils/: __init__.py  constants.py  utils.py
tests/core/: conftest.py  test_constants.py  test_errors.py  test_rpi_detect.py  test_tjbot_config.py  test_tjbot_init.py  test_utils.py
tests/live/: test_camera.py  test_led.py  test_microphone.py  test_servo.py  test_speaker.py  test_stt.py  test_tts.py  utils.py
